syntax = "proto3";
package trips;

option java_package = "org.mobilitydata.gtfsproto";
option java_outer_classname = "TripsProto";

message Trip {
    string routeId = 1;
    string serviceId = 2;
    string tripId = 3;
    string tripHeadsign = 4;
    string tripShortName = 5;

    enum DirectionId {
        A_TO_B = 0;
        B_TO_A = 1;
    }

    DirectionId directionId = 6;

    string blockId = 7;
    string shapeId = 8;

    enum Accessibility {
        UNKNOWN = 0;
        TRUE = 1;
        FALSE = 2;
    }
    Accessibility wheelchairAccessible = 9;
    Accessibility bikesAllowed = 10;
}

message tripCollection {
    repeated Trip trips = 1;
}